--- a/src/taiqtso/Makefile.am
+++ b/src/taiqtso/Makefile.am
@@ -58,12 +58,11 @@ SRCS =\
 include $(top_srcdir)/Moc.am
 include $(top_srcdir)/mfstamp.am
 
-lib_LTLIBRARIES = libtaiqtso@PDP_SUFFIX@.la
+noinst_LTLIBRARIES = libtaiqtso@PDP_SUFFIX@.la
 
 libtaiqtso@PDP_SUFFIX@_la_SOURCES = $(SRCS) $(HEADS)
 
 libtaiqtso@PDP_SUFFIX@_la_CPPFLAGS =\
-	-I@srcdir@/../ \
 	-I@srcdir@ \
 	-I@abs_top_builddir@ \
 	-I@srcdir@/../ta
