--- a/src/pdp/Makefile.am
+++ b/src/pdp/Makefile.am
@@ -1,4 +1,3 @@
-
 #*********************************************************
 #  Process this file with automake to produce Makefile.in
 #*********************************************************
@@ -14,16 +13,14 @@ TAHEADS_GUI =\
 	@abs_srcdir@/netstru_so.h \
 	@abs_srcdir@/netstru_qtso.h \
 	@abs_srcdir@/pdp_qtso.h \
-	@abs_srcdir@/pdplog_qtso.h \
-	@abs_srcdir@/v3_compat_qtso.h 
+	@abs_srcdir@/pdplog_qtso.h 
 
 HEADS_GUI =\
 	pdpview_qt.h \
 	netstru_so.h \
 	netstru_qtso.h \
 	pdp_qtso.h \
-	pdplog_qtso.h \
-	v3_compat_qtso.h 
+	pdplog_qtso.h 
 
 SRCS_GUI =\
 	pdpview_qt.cpp \
@@ -33,13 +30,9 @@ SRCS_GUI =\
 	netstru_qtso.cpp \
 	netstru_qtso.moc.cpp \
 	pdplog_qtso.cpp \
-	pdplog_qtso.moc.cpp \
-	v3_compat_qtso.cpp \
-	v3_compat_qtso.moc.cpp 
+	pdplog_qtso.moc.cpp 
 
 endif
-
-ta_TA_type.h tamisc_TA_type.h:
 
 TAHEADS =\
 	@abs_srcdir@/../ta/ta_TA_type.h \
@@ -53,8 +46,8 @@ TAHEADS =\
 	@abs_srcdir@/program.h \
 	@abs_srcdir@/pdplog.h \
 	@abs_srcdir@/pdpshell.h \
-	@abs_srcdir@/v3_compat.h \
-	$(TAHEADS_GUI) 
+	$(TAHEADS_GUI) \
+	@abs_srcdir@/v3_compat.h
 
 HEADS =\
 	pdpdeclare.h \
@@ -79,9 +72,9 @@ SRCS =\
 	program.cpp \
 	pdplog.cpp \
 	pdpshell.cpp \
-	v3_compat.cpp \
 	$(SRCS_GUI) \
-	pdp_ti.cpp
+	pdp_ti.cpp \
+	v3_compat.cpp
 
 include $(top_srcdir)/Maketa.am
 include $(top_srcdir)/Moc.am
@@ -89,14 +82,14 @@ include $(top_srcdir)/mfstamp.am
 
 lib_LTLIBRARIES = libpdp@PDP_SUFFIX@.la
 
-libpdp@PDP_SUFFIX@_la_DEPENDENCIES = libpdpTypeAccess@PDP_SUFFIX@.la
-
 libpdp@PDP_SUFFIX@_la_SOURCES = $(HEADS) $(SRCS)
 
 libpdp@PDP_SUFFIX@_la_CPPFLAGS =\
 	-I@srcdir@/../ \
 	-I@abs_top_builddir@ \
 	-I@srcdir@ \
+	-I@srcdir@/../bp \
+	-I@srcdir@/../leabra \
 	-I@srcdir@/../ta \
 	-I@srcdir@/../css \
 	-I@srcdir@/../tamisc \
@@ -104,42 +97,24 @@ libpdp@PDP_SUFFIX@_la_CPPFLAGS =\
 
 libpdp@PDP_SUFFIX@_la_CXXFLAGS = @OPT_LEVEL@
 
-libpdp@PDP_SUFFIX@_la_LIBADD = libpdpTypeAccess@PDP_SUFFIX@.la
+libpdp@PDP_SUFFIX@_la_LIBADD =\
+	libpdpTypeAccess@PDP_SUFFIX@.la \
+	@abs_top_builddir@/src/bp/libbp@PDP_SUFFIX@.la
+
+if TA_GUI
+libpdp@PDP_SUFFIX@_la_LIBADD +=\
+	 @abs_top_builddir@/src/taiqtso/libtaiqtso@PDP_SUFFIX@.la
+endif
 
 noinst_LTLIBRARIES = libpdpTypeAccess@PDP_SUFFIX@.la
 
-libpdpTypeAccess@PDP_SUFFIX@_la_SOURCES = pdp_TA.cpp pdp_TA_type.h pdp_TA_inst.h
+libpdpTypeAccess@PDP_SUFFIX@_la_SOURCES =\
+	pdp_TA.cpp \
+	pdp_TA_type.h \
+	pdp_TA_inst.h
 
 libpdpTypeAccess@PDP_SUFFIX@_la_CPPFLAGS = $(libpdp@PDP_SUFFIX@_la_CPPFLAGS)
 
 libpdpTypeAccess@PDP_SUFFIX@_la_CXXFLAGS = -g -O0
 
-bin_PROGRAMS = pdp@PDP_SUFFIX@++
-
-pdp@PDP_SUFFIX@___DEPENDENCIES = libpdp@PDP_SUFFIX@.la
-
-pdp@PDP_SUFFIX@___SOURCES = main.cpp
-
-pdp@PDP_SUFFIX@___LDADD =\
-	@abs_top_builddir@/src/pdp/libpdp@PDP_SUFFIX@.la \
-	@abs_top_builddir@/src/ta/libta@PDP_SUFFIX@.la \
-	@abs_top_builddir@/src/css/libcss@PDP_SUFFIX@.la \
-	@abs_top_builddir@/src/tamisc/libtamisc@PDP_SUFFIX@.la
-
-pdp@PDP_SUFFIX@___CPPFLAGS = $(libpdp@PDP_SUFFIX@_la_CPPFLAGS)
-
-pdp@PDP_SUFFIX@___CXXFLAGS = $(libpdp@PDP_SUFFIX@_la_CXXFLAGS)
-
 BUILT_SOURCES = pdp_TA_type.h
-CLEANFILES += pdp_TA.ccx
-
-#**************************************************
-#
-#                      GUI
-#
-#**************************************************
-if TA_GUI
-
-pdp@PDP_SUFFIX@___LDADD += @abs_top_builddir@/src/taiqtso/libtaiqtso@PDP_SUFFIX@.la
-
-endif
