--- a/src/tamisc/Makefile.am
+++ b/src/tamisc/Makefile.am
@@ -93,7 +93,9 @@ include $(top_srcdir)/Maketa.am
 include $(top_srcdir)/Moc.am
 include $(top_srcdir)/mfstamp.am
 
-lib_LTLIBRARIES = libtamisc@PDP_SUFFIX@.la
+noinst_LTLIBRARIES =\
+	libtamisc@PDP_SUFFIX@.la \
+	libtamiscTypeAccess@PDP_SUFFIX@.la
 
 libtamisc@PDP_SUFFIX@_la_DEPENDENCIES = libtamiscTypeAccess@PDP_SUFFIX@.la
 
@@ -107,12 +109,10 @@ libtamisc@PDP_SUFFIX@_la_CPPFLAGS =\
 	-I@srcdir@/../css \
 	-I@srcdir@/../taiqtso
 
-libtamisc@PDP_SUFFIX@_la_LIBADD = @abs_top_builddir@/src/tamisc/libtamiscTypeAccess@PDP_SUFFIX@.la
+libtamisc@PDP_SUFFIX@_la_LIBADD =\
+	libtamiscTypeAccess@PDP_SUFFIX@.la
 
 libtamisc@PDP_SUFFIX@_la_CXXFLAGS = @OPT_LEVEL@
-
-
-noinst_LTLIBRARIES = libtamiscTypeAccess@PDP_SUFFIX@.la
 
 libtamiscTypeAccess@PDP_SUFFIX@_la_SOURCES = tamisc_TA.cpp tamisc_TA_type.h tamisc_TA_inst.h
 
@@ -121,4 +121,4 @@ libtamiscTypeAccess@PDP_SUFFIX@_la_CPPFLAGS = $(libtamisc@PDP_SUFFIX@_la_CPPFLAG
 libtamiscTypeAccess@PDP_SUFFIX@_la_CXXFLAGS = -g -O0
 
 BUILT_SOURCES = tamisc_TA_type.h
-CLEANFILES += tamisc_TA.ccx
+
