fixed Variant issue on Linux

--- a/src/ta_lib/Makefile
+++ b/src/ta_lib/Makefile
@@ -14,7 +14,7 @@
 
 
 
-SOURCES = $(libta_la_SOURCES) $(nodist_EXTRA_libta_la_SOURCES)
+SOURCES = $(libta_debug_la_SOURCES) $(nodist_EXTRA_libta_debug_la_SOURCES)
 
 
 pkgdatadir = $(datadir)/PDP++
@@ -54,10 +54,10 @@ am__strip_dir = `echo $$p | sed -e 's|^.*/||'`;
 am__installdirs = "$(DESTDIR)$(libdir)"
 libLTLIBRARIES_INSTALL = $(INSTALL)
 LTLIBRARIES = $(lib_LTLIBRARIES)
-libta_la_DEPENDENCIES =  \
-	/home/mingus/pdp4.0/trunk/src/ta_lib/../ta/libta.la
-am_libta_la_OBJECTS =
-libta_la_OBJECTS = $(am_libta_la_OBJECTS)
+libta_debug_la_DEPENDENCIES =  \
+	/home/baisa/pdp4.0/src/ta_lib/../ta/libta_debug.la
+am_libta_debug_la_OBJECTS =
+libta_debug_la_OBJECTS = $(am_libta_debug_la_OBJECTS)
 DEFAULT_INCLUDES = 
 depcomp = $(SHELL) $(top_srcdir)/cfg/depcomp
 am__depfiles_maybe = depfiles
@@ -69,24 +69,24 @@ LTCXXCOMPILE = $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) \
 CXXLD = $(CXX)
 CXXLINK = $(LIBTOOL) --tag=CXX --mode=link $(CXXLD) $(AM_CXXFLAGS) \
 	$(CXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
-SOURCES = $(libta_la_SOURCES) \
-	$(nodist_EXTRA_libta_la_SOURCES)
-DIST_SOURCES = $(libta_la_SOURCES)
+SOURCES = $(libta_debug_la_SOURCES) \
+	$(nodist_EXTRA_libta_debug_la_SOURCES)
+DIST_SOURCES = $(libta_debug_la_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 srcdir = .
 top_srcdir = ../..
-ACLOCAL = ${SHELL} /home/mingus/pdp4.0/trunk/cfg/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /home/baisa/pdp4.0/cfg/missing --run aclocal-1.9
 ALLOCA = 
 AMDEP_FALSE = #
 AMDEP_TRUE = 
 AMINCLUDE = 
-AMTAR = ${SHELL} /home/mingus/pdp4.0/trunk/cfg/missing --run tar
+AMTAR = ${SHELL} /home/baisa/pdp4.0/cfg/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /home/mingus/pdp4.0/trunk/cfg/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/mingus/pdp4.0/trunk/cfg/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/mingus/pdp4.0/trunk/cfg/missing --run automake-1.9
+AUTOCONF = ${SHELL} /home/baisa/pdp4.0/cfg/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/baisa/pdp4.0/cfg/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/baisa/pdp4.0/cfg/missing --run automake-1.9
 AWK = gawk
 AX_RPM_SPEC_FILE = 
 CC = gcc
@@ -97,17 +97,17 @@ CPPFLAGS =   -I/usr/local/include/Inventor/annex -D_REENTRANT -I/usr/X11R6/inclu
 CXX = g++
 CXXCPP = g++ -E
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS =  -I/usr/local/Trolltech/Qt-4.1.0/include -I/usr/local/Trolltech/Qt-4.1.0/include/Qt -I/usr/local/Trolltech/Qt-4.1.0/include/QtOpenGL -I/usr/local/Trolltech/Qt-4.1.0/include/QtCore -I/usr/local/Trolltech/Qt-4.1.0/include/QtGui -I/usr/local/Trolltech/Qt-4.1.0/include/QtNetwork -I/usr/local/Trolltech/Qt-4.1.0/include/QtXml -I/usr/local/Trolltech/Qt-4.1.0/include/QtTest -I/usr/local/Trolltech/Qt-4.1.0/include/Qt3Support 
+CXXFLAGS =  -I/usr/local/Trolltech/Qt-4.1.0/include -I/usr/local/Trolltech/Qt-4.1.0/include/Qt -I/usr/local/Trolltech/Qt-4.1.0/include/QtOpenGL -I/usr/local/Trolltech/Qt-4.1.0/include/QtCore -I/usr/local/Trolltech/Qt-4.1.0/include/QtGui -I/usr/local/Trolltech/Qt-4.1.0/include/QtNetwork -I/usr/local/Trolltech/Qt-4.1.0/include/QtXml -I/usr/local/Trolltech/Qt-4.1.0/include/QtTest -I/usr/local/Trolltech/Qt-4.1.0/include/Qt3Support  -I/usr/local/Trolltech/Qt-4.1.0/include/QtTest
 CYGPATH_W = echo
-DEBUG_FALSE = 
-DEBUG_TRUE = #
+DEBUG_FALSE = #
+DEBUG_TRUE = 
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
 ECHO = echo
 ECHO_C = 
 ECHO_N = -n
 ECHO_T = 
-EDITOR = emacs -nw
+EDITOR = 
 EGREP = grep -E
 EXEEXT = 
 INCLUDE_AMINCLUDE_AM = 
@@ -120,19 +120,19 @@ LDFLAGS =  -L/usr/local/Trolltech/Qt-4.1.0/lib -L/usr/local/lib -L/usr/X11R6/lib
 LEX = flex
 LEXLIB = -lfl
 LEX_OUTPUT_ROOT = lex.yy
-LIBOBJS = 
-LIBS = -lreadline -ltermcap  -ldl -lQtGui -lQt3Support -lQtOpenGL -lQtNetwork -lSoQt -lQtOpenGL -lQtGui -lQt3Support -lXmu -lXi -lCoin -lGL -lXext -lSM -lICE -lX11 -ldl -lpthread -lm -ljpeg
+LIBOBJS =  error$U.o strtod$U.o
+LIBS = -lreadline -ltermcap  -ldl -lQtGui_debug -lQt3Support_debug -lQtOpenGL_debug -lQtNetwork_debug -lQtTest -lSoQt -lQtOpenGL -lQtGui -lQt3Support -lXmu -lXi -lCoin -lGL -lXext -lSM -lICE -lX11 -ldl -lpthread -lm -ljpeg
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LN_S = ln -s
-LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/mingus/pdp4.0/trunk/cfg/missing --run makeinfo
+LTLIBOBJS =  error$U.lo strtod$U.lo
+MAKEINFO = ${SHELL} /home/baisa/pdp4.0/cfg/missing --run makeinfo
 MPICXX = 
 MPI_FALSE = 
 MPI_TRUE = #
 NO_TA_GUI_FALSE = 
 NO_TA_GUI_TRUE = #
 OBJEXT = o
-OPT_LEVEL = -g -O2
+OPT_LEVEL = -g -O0
 PACKAGE = PDP++
 PACKAGE_BUGREPORT = pdp-discuss@psych-srv3.Colorado.EDU
 PACKAGE_NAME = PDP
@@ -140,8 +140,8 @@ PACKAGE_STRING = PDP 4.0
 PACKAGE_TARNAME = PDP++
 PACKAGE_VERSION = 4.0
 PATH_SEPARATOR = :
-PDP_SUFFIX = 
-PLATFORM_SUFFIX = fc4
+PDP_SUFFIX = _debug
+PLATFORM_SUFFIX = 
 POW_LIB = 
 QT_MOC = /usr/local/Trolltech/Qt-4.1.0/bin/moc
 RANLIB = ranlib
@@ -154,11 +154,11 @@ STRIP = strip
 TA_GUI_FALSE = #
 TA_GUI_TRUE = 
 VERSION = 4.0
-WANT_CSS_BIN = 
+WANT_CSS_BIN = src/css_bin
 WANT_TAIQTSO = src/taiqtso
 YACC = bison -y
-abs_srcdir = /home/mingus/pdp4.0/trunk/src/ta_lib
-abs_top_builddir = /home/mingus/pdp4.0/trunk/src/ta_lib/../../.
+abs_srcdir = /home/baisa/pdp4.0/src/ta_lib
+abs_top_builddir = /home/baisa/pdp4.0/src/ta_lib/../../.
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_CXX = g++
@@ -188,14 +188,14 @@ host_os = linux-gnu
 host_vendor = pc
 includedir = ${prefix}/include
 infodir = ${prefix}/info
-install_sh = /home/mingus/pdp4.0/trunk/cfg/install-sh
+install_sh = /home/baisa/pdp4.0/cfg/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localstatedir = ${prefix}/var
 mandir = ${prefix}/man
 mkdir_p = mkdir -p --
 oldincludedir = /usr/include
-prefix = /home/mingus
+prefix = /usr/local
 program_transform_name = s,x,x,
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
@@ -203,12 +203,12 @@ sim_ac_qt_cygpath = false
 sim_ac_soqt_configcmd = /usr/local/bin/soqt-config
 sysconfdir = ${prefix}/etc
 target_alias = 
-lib_LTLIBRARIES = libta.la
-libta_la_SOURCES = 
+lib_LTLIBRARIES = libta_debug.la
+libta_debug_la_SOURCES = 
 
 # Dummy C++ source to cause C++ linking.
-nodist_EXTRA_libta_la_SOURCES = dummy.cxx
-libta_la_LIBADD = /home/mingus/pdp4.0/trunk/src/ta_lib/../ta/libta.la
+nodist_EXTRA_libta_debug_la_SOURCES = dummy.cxx
+libta_debug_la_LIBADD = /home/baisa/pdp4.0/src/ta_lib/../ta/libta_debug.la
 all: all-am
 
 .SUFFIXES:
@@ -269,8 +269,8 @@ clean-libLTLIBRARIES:
 	  echo "rm -f \"$${dir}/so_locations\""; \
 	  rm -f "$${dir}/so_locations"; \
 	done
-libta.la: $(libta_la_OBJECTS) $(libta_la_DEPENDENCIES) 
-	$(CXXLINK) -rpath $(libdir) $(libta_la_LDFLAGS) $(libta_la_OBJECTS) $(libta_la_LIBADD) $(LIBS)
+libta_debug.la: $(libta_debug_la_OBJECTS) $(libta_debug_la_DEPENDENCIES) 
+	$(CXXLINK) -rpath $(libdir) $(libta_debug_la_LDFLAGS) $(libta_debug_la_OBJECTS) $(libta_debug_la_LIBADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
