--- a/src/pdp_bin/Makefile.in
+++ b/src/pdp_bin/Makefile.in
@@ -51,8 +51,8 @@ PROGRAMS = $(bin_PROGRAMS)
 am_pdp@PDP_SUFFIX@___OBJECTS = pdp@PDP_SUFFIX@__-main.$(OBJEXT)
 pdp@PDP_SUFFIX@___OBJECTS = $(am_pdp@PDP_SUFFIX@___OBJECTS)
 pdp@PDP_SUFFIX@___DEPENDENCIES =  \
-	@abs_top_builddir@/src/pdp/libpdp@PDP_SUFFIX@.la \
-	@abs_top_builddir@/src/ta/libta@PDP_SUFFIX@.la
+	@abs_top_builddir@/src/pdp_lib/libpdp@PDP_SUFFIX@.la \
+	@abs_top_builddir@/src/ta_lib/libta@PDP_SUFFIX@.la
 DEFAULT_INCLUDES = 
 depcomp = $(SHELL) $(top_srcdir)/cfg/depcomp
 am__depfiles_maybe = depfiles
@@ -205,8 +205,8 @@ target_alias = @target_alias@
 PROJNAME = pdp_bin
 pdp@PDP_SUFFIX@___SOURCES = main.cpp
 pdp@PDP_SUFFIX@___LDADD = \
-	@abs_top_builddir@/src/pdp/libpdp@PDP_SUFFIX@.la \
-	@abs_top_builddir@/src/ta/libta@PDP_SUFFIX@.la
+	@abs_top_builddir@/src/pdp_lib/libpdp@PDP_SUFFIX@.la \
+	@abs_top_builddir@/src/ta_lib/libta@PDP_SUFFIX@.la
 
 pdp@PDP_SUFFIX@___CPPFLAGS = \
 	-I@abs_top_builddir@ \
