--- a/src/ta/Makefile.am
+++ b/src/ta/Makefile.am
@@ -133,7 +133,9 @@ include $(top_srcdir)/Maketa.am
 include $(top_srcdir)/Moc.am
 include $(top_srcdir)/mfstamp.am
 
-noinst_LTLIBRARIES = libta@PDP_SUFFIX@.la libtaTypeAccess@PDP_SUFFIX@.la
+noinst_LTLIBRARIES =\
+	libta@PDP_SUFFIX@.la \
+	libtaTypeAccess@PDP_SUFFIX@.la
 
 libta@PDP_SUFFIX@_la_DEPENDENCIES = libtaTypeAccess@PDP_SUFFIX@.la
 
@@ -147,17 +149,6 @@ libta@PDP_SUFFIX@_la_CPPFLAGS =\
 	-I@srcdir@/../taiqtso
 
 libta@PDP_SUFFIX@_la_CXXFLAGS = @OPT_LEVEL@
-
-libta@PDP_SUFFIX@_la_LIBADD =\
-	libtaTypeAccess@PDP_SUFFIX@.la \
-	@abs_top_builddir@/src/css/libcss@PDP_SUFFIX@.la \
-	@abs_top_builddir@/src/tamisc/libtamisc@PDP_SUFFIX@.la
-
-if TA_GUI
-
-libta@PDP_SUFFIX@_la_LIBADD += @abs_top_builddir@/src/taiqtso/libtaiqtso@PDP_SUFFIX@.la
-
-endif
 
 libtaTypeAccess@PDP_SUFFIX@_la_SOURCES =\
 	ta_TA.cpp \
