--- a/src/pdp_lib/Makefile
+++ b/src/pdp_lib/Makefile
@@ -55,7 +55,8 @@ am__installdirs = "$(DESTDIR)$(libdir)"
 libLTLIBRARIES_INSTALL = $(INSTALL)
 LTLIBRARIES = $(lib_LTLIBRARIES)
 libpdp_debug_la_DEPENDENCIES =  \
-	/home/baisa/pdp4.0/src/pdp_lib/../pdp/libpdp_debug.la
+	/home/mingus/pdp4.0/trunk/src/pdp_lib/../.././src/pdp/libpdp_debug.la \
+	/home/mingus/pdp4.0/trunk/src/pdp_lib/../.././src/bp/libbp_debug.la
 am_libpdp_debug_la_OBJECTS =
 libpdp_debug_la_OBJECTS = $(am_libpdp_debug_la_OBJECTS)
 DEFAULT_INCLUDES = 
@@ -77,16 +78,16 @@ CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 srcdir = .
 top_srcdir = ../..
-ACLOCAL = ${SHELL} /home/baisa/pdp4.0/cfg/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /home/mingus/pdp4.0/trunk/cfg/missing --run aclocal-1.9
 ALLOCA = 
 AMDEP_FALSE = #
 AMDEP_TRUE = 
 AMINCLUDE = 
-AMTAR = ${SHELL} /home/baisa/pdp4.0/cfg/missing --run tar
+AMTAR = ${SHELL} /home/mingus/pdp4.0/trunk/cfg/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /home/baisa/pdp4.0/cfg/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/baisa/pdp4.0/cfg/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/baisa/pdp4.0/cfg/missing --run automake-1.9
+AUTOCONF = ${SHELL} /home/mingus/pdp4.0/trunk/cfg/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/mingus/pdp4.0/trunk/cfg/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/mingus/pdp4.0/trunk/cfg/missing --run automake-1.9
 AWK = gawk
 AX_RPM_SPEC_FILE = 
 CC = gcc
@@ -107,7 +108,7 @@ ECHO = echo
 ECHO_C = 
 ECHO_N = -n
 ECHO_T = 
-EDITOR = 
+EDITOR = emacs -nw
 EGREP = grep -E
 EXEEXT = 
 INCLUDE_AMINCLUDE_AM = 
@@ -125,7 +126,7 @@ LIBS = -lreadline -ltermcap  -ldl -lQtGui_debug -lQt3Support_debug -lQtOpenGL_de
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LN_S = ln -s
 LTLIBOBJS =  error$U.lo strtod$U.lo
-MAKEINFO = ${SHELL} /home/baisa/pdp4.0/cfg/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/mingus/pdp4.0/trunk/cfg/missing --run makeinfo
 MPICXX = 
 MPI_FALSE = 
 MPI_TRUE = #
@@ -141,7 +142,7 @@ PACKAGE_TARNAME = PDP++
 PACKAGE_VERSION = 4.0
 PATH_SEPARATOR = :
 PDP_SUFFIX = _debug
-PLATFORM_SUFFIX = 
+PLATFORM_SUFFIX = fc4
 POW_LIB = 
 QT_MOC = /usr/local/Trolltech/Qt-4.1.0/bin/moc
 RANLIB = ranlib
@@ -157,8 +158,8 @@ VERSION = 4.0
 WANT_CSS_BIN = src/css_bin
 WANT_TAIQTSO = src/taiqtso
 YACC = bison -y
-abs_srcdir = /home/baisa/pdp4.0/src/pdp_lib
-abs_top_builddir = /home/baisa/pdp4.0/src/pdp_lib/../../.
+abs_srcdir = /home/mingus/pdp4.0/trunk/src/pdp_lib
+abs_top_builddir = /home/mingus/pdp4.0/trunk/src/pdp_lib/../../.
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_CXX = g++
@@ -188,14 +189,14 @@ host_os = linux-gnu
 host_vendor = pc
 includedir = ${prefix}/include
 infodir = ${prefix}/info
-install_sh = /home/baisa/pdp4.0/cfg/install-sh
+install_sh = /home/mingus/pdp4.0/trunk/cfg/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localstatedir = ${prefix}/var
 mandir = ${prefix}/man
 mkdir_p = mkdir -p --
 oldincludedir = /usr/include
-prefix = /usr/local
+prefix = /home/mingus
 program_transform_name = s,x,x,
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
@@ -208,7 +209,10 @@ libpdp_debug_la_SOURCES =
 
 # Dummy C++ source to cause C++ linking.
 nodist_EXTRA_libpdp_debug_la_SOURCES = dummy.cxx
-libpdp_debug_la_LIBADD = /home/baisa/pdp4.0/src/pdp_lib/../pdp/libpdp_debug.la
+libpdp_debug_la_LIBADD = \
+	/home/mingus/pdp4.0/trunk/src/pdp_lib/../.././src/pdp/libpdp_debug.la \
+	/home/mingus/pdp4.0/trunk/src/pdp_lib/../.././src/bp/libbp_debug.la
+
 all: all-am
 
 .SUFFIXES:
