--- a/src/ta/Makefile.am
+++ b/src/ta/Makefile.am
@@ -137,7 +137,8 @@ noinst_LTLIBRARIES =\
 	libta@PDP_SUFFIX@.la \
 	libtaTypeAccess@PDP_SUFFIX@.la
 
-libta@PDP_SUFFIX@_la_DEPENDENCIES = libtaTypeAccess@PDP_SUFFIX@.la
+libta@PDP_SUFFIX@_la_DEPENDENCIES =\
+	libtaTypeAccess@PDP_SUFFIX@.la
 
 libta@PDP_SUFFIX@_la_SOURCES = $(SRCS) $(HEADS)
 
@@ -150,12 +151,16 @@ libta@PDP_SUFFIX@_la_CPPFLAGS =\
 
 libta@PDP_SUFFIX@_la_CXXFLAGS = @OPT_LEVEL@
 
+libta@PDP_SUFFIX@_la_LIBADD =\
+	libtaTypeAccess@PDP_SUFFIX@.la
+
 libtaTypeAccess@PDP_SUFFIX@_la_SOURCES =\
 	ta_TA.cpp \
 	ta_TA_type.h \
 	ta_TA_inst.h
 
-libtaTypeAccess@PDP_SUFFIX@_la_CPPFLAGS = $(libta@PDP_SUFFIX@_la_CPPFLAGS)
+libtaTypeAccess@PDP_SUFFIX@_la_CPPFLAGS =\
+	$(libta@PDP_SUFFIX@_la_CPPFLAGS)
 
 libtaTypeAccess@PDP_SUFFIX@_la_CXXFLAGS = -g -O0
 
