--- a/src/ta_lib/Makefile.am
+++ b/src/ta_lib/Makefile.am
@@ -5,13 +5,11 @@ libta@PDP_SUFFIX@_la_SOURCES =
 nodist_EXTRA_libta@PDP_SUFFIX@_la_SOURCES = dummy.cxx
 
 libta@PDP_SUFFIX@_la_LIBADD =\
-	@abs_top_builddir@/src/css/libcss@PDP_SUFFIX@.la \
 	@abs_top_builddir@/src/tamisc/libtamisc@PDP_SUFFIX@.la \
-	@abs_top_builddir/src/ta/libta@PDP_SUFFIX@.la \
-	@abs_top_builddir/src/ta/libtaTypeAccess@PDP_SUFFIX@.la
+	@abs_top_builddir@/src/css/libcss@PDP_SUFFIX@.la \
+	@abs_top_builddir@/src/ta/libta@PDP_SUFFIX@.la
 
 if TA_GUI
-
-libta@PDP_SUFFIX@_la_LIBADD += @abs_top_builddir@/src/taiqtso/libtaiqtso@PDP_SUFFIX@.la
-
+libta@PDP_SUFFIX@_la_LIBADD +=\
+	@abs_top_builddir@/src/taiqtso/libtaiqtso@PDP_SUFFIX@.la
 endif
