Fix Moc 4 issue w/ needing TA_USE_INVENTOR define. Ended up just having to actually define it for that specific file. Also, return HAVE_CONFIG_H to command-line

--- a/src/taiqtso/Makefile.am
+++ b/src/taiqtso/Makefile.am
@@ -3,7 +3,6 @@
 #*********************************************************
 
 PROJNAME = taiqtso
-DEFS=
 srcdir = @srcdir@
 VPATH = @srcdir@
 
@@ -58,11 +57,15 @@ SRCS =\
 include $(top_srcdir)/Moc.am
 include $(top_srcdir)/mfstamp.am
 
+irenderarea.moc.cpp:
+	$(QT_MOC) -DTA_USE_INVENTOR -o irenderarea.moc.cpp irenderarea.h
+
 noinst_LTLIBRARIES = libtaiqtso@PDP_SUFFIX@.la
 
 libtaiqtso@PDP_SUFFIX@_la_SOURCES = $(SRCS) $(HEADS)
 
 libtaiqtso@PDP_SUFFIX@_la_CPPFLAGS =\
+	-I@srcdir@/.. \
 	-I@srcdir@ \
 	-I@abs_top_builddir@ \
 	-I@srcdir@/../ta
