--- a/configure.ac
+++ b/configure.ac
@@ -46,7 +46,15 @@ AC_PROG_LEX
 PGAC_CHECK_READLINE                                    # Check for readline, termcap etc...
 AC_HAVE_LIBRARY([dl],[LIBS="$LIBS -ldl"],[SIM_AC_CONFIGURATION_WARNING([libdl not found])])
 SIM_AC_HAVE_LIBZLIB_IFELSE(,[SIM_AC_CONFIGURATION_WARNING([Failed to detect libzlib])])
-AC_DEFINE([HAVE___ATTRIBUTE__],,[Fix for strange pthread compiler error])
+
+AH_VERBATIM([_GLIBCXX_GTHREAD_USE_WEAK],
+[/* Fix pthread bug. See:  http://softwareforums.intel.com/ids/board/message?board.id=16&message.id=3484 */
+#ifndef _GLIBCXX_GTHREAD_USE_WEAK
+ #define _GLIBCXX_GTHREAD_USE_WEAK 0
+#endif
+])
+
+#AC_DEFINE([_GLIBCXX_GTHREAD_USE_WEAK],[0],[Fix pthread bug. See:  http://softwareforums.intel.com/ids/board/message?board.id=16&message.id=3484])
 
 # --with-rpm
 if test x"$rpm" = x"true"; then
